--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "es3ify-webpack-plugin": "^0.1.0",
     "gas-webpack-plugin": "^1.0.2",
     "jest": "^25.1.0",
+    "jest-date-mock": "^1.0.8",
     "ts-jest": "^25.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
