--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@google/clasp": "^2.3.0",
     "@types/google-apps-script": "^1.0.10",
     "@types/jest": "^24.9.1",
+    "@types/node": "^13.9.0",
     "es3ify-webpack-plugin": "^0.1.0",
     "gas-webpack-plugin": "^1.0.2",
     "jest": "^25.1.0",
