--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cotlin",
   "version": "1.0.0",
-  "description": "Cotlin is tools that collect the tweet  links",
+  "description": "Cotlin is tools that collect links in tweet by using the Twitter API(Search Tweets)",
   "main": "index.js",
   "scripts": {
     "login": "clasp login",
